--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -2,6 +2,7 @@ aiohttp==3.5.4
 async-timeout==3.0.1
 attrs==19.1.0
 backcall==0.1.0
+beautifulsoup4==4.8.1
 chardet==3.0.4
 decorator==4.4.0
 discord.py==1.2.3
@@ -19,6 +20,7 @@ prompt-toolkit==2.0.9
 ptyprocess==0.6.0
 Pygments==2.4.2
 six==1.12.0
+soupsieve==1.9.4
 traitlets==4.3.2
 typing-extensions==3.7.4
 wcwidth==0.1.7
